# dos14-Stolyarov_Dmitry-git-flow

./: .gitignore  Dockerfile  Jenkinsfile  LICENSE  README.md  docker-compose.yml  main.py  pyproject.toml  users.json
ansible/: playbook.yaml
ansible/roles/create_user/tasks/: main.yml
ansible/roles/docker_start/tasks/: main.yml
ansible/roles/docker_start/templates/: service.service.j2
ansible/roles/install_apps/tasks/: main.yml
ansible/roles/install_poetry/handlers/: main.yml
ansible/roles/install_poetry/tasks/: main.yml
ansible/roles/install_service/tasks/: main.yml
ansible/roles/install_service/templates/: service.service.j2
ansible/roles/installations/tasks/: main.yml
authz-chart/: Chart.yaml  values.yaml
authz-chart/templates/: NOTES.txt  _helpers.tpl  deployment.yaml  hpa.yaml  ingress.yaml  service.yaml  serviceaccount.yaml
authz-chart/templates/tests/: test-connection.yaml
charts/argocd/: application.yaml  project.yaml
charts/authz/: Chart.yaml  namespace.yaml  values-dev.yaml  values-prd.yaml  values.yaml
charts/authz/templates/: NOTES.txt  _helpers.tpl  configmap.yaml  deployment.yaml  hpa.yaml  ingress.yaml  service.yaml  serviceaccount.yaml
charts/authz/templates/tests/: test-connection.yaml
nginx/: Dockerfile  authz.conf  logging.conf  nginx.conf
terraform_code/: README.md
